--- a/src/404.html
+++ b/src/404.html
@@ -8,6 +8,6 @@
 	</head>
 
 	<body>
-		<img src="assets/icons/404.jpg" alt="Photo-erreur-404" width="100%" height="100%" />
+		<img src="src/assets/icons/404.jpg" alt="Photo-erreur-404" width="100%" height="100%" />
 	</body>
 </html>
